# hi-messenger

./: .gitignore  auth.py  database.py  localhost-key.pem  localhost.pem  main.py  messenger.db  models.py  pyproject.toml  render.yaml  requirements.txt
static/: index.html  manifest.json  sw.js
